--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,4 +12,6 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/Engine.PhysicsSettings]
+DefaultGravityZ=-2000.000000
 
