Completed basic main menu
Added extremely simple main menu. It starts the game at the first level, has a minimal about section, and allows for quitting the game.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
+EditorStartupMap=/Game/StarterContent/Maps/MainMenu.MainMenu
+GameDefaultMap=/Game/StarterContent/Maps/MainMenu.MainMenu
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/GolfGame")
@@ -14,4 +15,3 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-2000.000000
-
