cooker order and info updates

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,12 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=31FA0A544C478B6D1465C4A6F7B9565D
+ProjectName=DECK 15
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+
