Added code documentation, icon, and splash screen

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,6 +2,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=31FA0A544C478B6D1465C4A6F7B9565D
 ProjectName=DECK 15
+CopyrightNotice=Copyright Epic Games, Inc. All Rights Reserved.
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "B18662544A81A1C88D3B699D98CCD44F", "DECK 15")
 
 [StartupActions]
 bAddPacks=True
@@ -9,4 +11,3 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 BuildConfiguration=PPBC_Shipping
-
